# eqResolver

EqResolver/: CMakeLists.txt
EqResolver/src/libraries/nearXYZ/: CMakeLists.txt
EqResolver/src/libraries/nearXYZ/controlMatrix/: theMatrix.cpp  theMatrix.h
EqResolver/src/libraries/nearXYZ/nearXYZ/: nearXYZ.cpp  nearXYZ.h
EqResolver/src/libraries/utilities/: CMakeLists.txt
EqResolver/src/libraries/utilities/nodes/: nodes.cpp  nodes.h
